--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "test": "mocha"
   },
   "dependencies": {
-    "lodash": "^4.17.19",
-    "node-fetch": "^2.6.0",
     "request": "^2.88.2",
-    "uuid": "^2.0.3"
+    "twitter": "^1.7.1"
   },
   "devDependencies": {
     "chai": "^4.2.0",
